--- a/UnityGitInitializer/packages.config
+++ b/UnityGitInitializer/packages.config
@@ -2,5 +2,6 @@
 <packages>
   <package id="chilkat-win32" version="9.5.0.76" targetFramework="net461" />
   <package id="chilkat-x64" version="9.5.0.76" targetFramework="net461" />
+  <package id="HtmlAgilityPack" version="1.9.1" targetFramework="net461" />
   <package id="System.Management.Automation.dll" version="10.0.10586.0" targetFramework="net461" />
 </packages>
