--- a/UnityGitInitializer/packages.config
+++ b/UnityGitInitializer/packages.config
@@ -1,7 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="chilkat-win32" version="9.5.0.76" targetFramework="net461" />
-  <package id="chilkat-x64" version="9.5.0.76" targetFramework="net461" />
-  <package id="HtmlAgilityPack" version="1.9.1" targetFramework="net461" />
+  <package id="chilkat-win32" version="9.5.0.77" targetFramework="net461" />
+  <package id="chilkat-x64" version="9.5.0.77" targetFramework="net461" />
+  <package id="HtmlAgilityPack" version="1.11.0" targetFramework="net461" />
+  <package id="ILMerge" version="3.0.21" targetFramework="net461" />
+  <package id="ILRepack" version="2.0.16" targetFramework="net461" />
   <package id="System.Management.Automation.dll" version="10.0.10586.0" targetFramework="net461" />
 </packages>
